# basic-assistant

./: assistant.py  pyproject.toml
openapi_adapter/: open_api.py
settings/: settings.py
speaker/: engine.py  speak.py
